tests/ui/coherence/illegal-copy-bad-projection.stderr
error[E0412]: cannot find type `void` in this scope
  --> $DIR/illegal-copy-bad-projection.rs:6:23
   |
LL |     type Ptr = *const void;
   |                       ^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
